<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/index"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="14sp"
            android:textColor="@color/title"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/name"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/pass"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/textLogin"
            android:onClick="btn_login_Click"
            android:background="@color/btn"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/btn"
            android:onClick="btn_sign_up"
            android:text="@string/textsignup" />
        <Button
            android:id="@+id/btn_forgotpass"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/textforgotpass"
            android:background="@color/btn"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>