<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/index"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/logo"/>
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan"
                    android:textSize="14sp"
                    android:textColor="@color/title"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/namesurname"
                    android:inputType="text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="Adınız Soyadınız"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="+90"
                        android:textSize="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <EditText
                        android:id="@+id/telefon"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:hint="Telefon Numaranız"
                        android:inputType="number"
                        android:maxLength="10" />
                </LinearLayout>

                <EditText
                    android:id="@+id/email"
                    android:inputType="text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="E-mail adresiniz"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/adres"
                    android:inputType="text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="Adresiniz"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/username"
                    android:inputType="text"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/pass"
                    android:inputType="textPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/pass"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="KAYIT OL"
                    android:onClick="btn_sign_up_Click"
                    android:background="@color/btn"/>

                <Button
                    android:id="@+id/btn_geri"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/btn"
                    android:onClick="btn_geri_Click"
                    android:text="ANA SAYFA" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>